fixed letter spacing

--- a/docs/style.css
+++ b/docs/style.css
@@ -51,6 +51,7 @@ body {
 /*    font-size: 2em; */
     font-size: 2.3em;
     font-size-adjust: 0.4;
+    letter-spacing: 0;
 }
 
 code {
